# Domain-adaptation-on-segmentation

./: .gitignore  README.md  萬代幣計算機.ipynb
AdaptSegNet-master/: README.md  compute_synthia_iou.py  train_cityscapes_multi.py  train_gta2cityscapes_multi.py  train_synthia_multi.py
AdaptSegNet-master/dataset/: Synthia_dataset.py  ours_dataset.py
Adapt_Road Scene Segmenters/: README
Adapt_Road Scene Segmenters/data/: Cityscapes.txt  Cityscapes_rand.txt  Roma.txt  Roma_base.txt  val_Taipei.txt  val_cityscapes.txt
Adapt_Road Scene Segmenters/scripts/: infer.sh
Adapt_Road Scene Segmenters/tools/: data_reader.py  infer.py
Adapt_Road_Scene/: README.md
Adapt_Road_Scene/data/: Rio.txt  Rio_base.txt  Taipei.txt  Taipei.txt~  Taipei_val.txt  Tokyo.txt  Tokyo_base.txt  Tokyo_val.txt  cscape_val.txt  val_Rio.txt  val_Roma.txt  val_Tokyo.txt
Adapt_Structured_Output/: README.md  compute_iou.py  evaluate_cityscapes.py  evaluate_synthia.py  train_cityscapes_multi.py  train_gta2cityscapes_multi.py  train_synthia2cityscapes_multi.py  train_synthia_multi.py
FCNs_Wild/: CMakeLists.txt  README.md
FCNs_Wild/data/: Rio_val.txt  (+5 more)
FCNs_Wild/lib/: CMakeLists.txt
FCNs_Wild/lib/constraintloss/: CMakeLists.txt  constraintsoftmax.cpp  constraintsoftmax.h
FCNs_Wild/lib/optimization/: CMakeLists.txt  fista.cpp  fista.h
FCNs_Wild/lib/python/: CMakeLists.txt  boost.h  ccnn.cpp  ccnn.h  constraintloss.cpp  constraintloss.h  util.cpp  util.h
FCNs_Wild/lib/util/: CMakeLists.txt  eigen.cpp  eigen.h  win_util.cpp  win_util.h
MCD_DA_seg/: README.md  adapt_tester.py  adapt_trainer.py  argmyparse.py  datasets.py  loss.py  source_tester.py  source_trainer.py  util.py
(+75 files in other folders)
